style(login-form): change colore button in form[kh-12]

--- a/register.html
+++ b/register.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Register file</h1>
-    <h1>login</h1>
+    <h1 style="color: rebeccapurple;">login</h1>
+
 </body>
 </html>
