refactore(update regeter): clean update register function [kh-123]

--- a/register.html
+++ b/register.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Register file</h1>
     <h1 style="color: rebeccapurple;">login</h1>
+    <h1 style="color: rebeccapurple;">login</h1>
 
 </body>
 </html>
