refactor(update manage-user) : Clean update manage-user function [KH-33]

--- a/manage-user.html
+++ b/manage-user.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <button>submit</button>
+    <button class="btn btn-primary">submit</button>
 </body>
 </html>
